base/applications/debezium/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: debezium
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # cert-manager.io/cluster-issuer: letsencrypt-prod
    # whitelist IPs:
    # nginx.ingress.kubernetes.io/whitelist-source-range: ""

spec:
  ingressClassName: nginx
  tls:
    - secretName: debezium-tls
      hosts:
        - schema-registry.local.com.br
        - debezium.local.com.br

  rules:
    - host: schema-registry.local.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: schema-registry-kafka
                port:
                  number: 8081

    - host: debezium-ui.local.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: debezium-ui
                port:
                  number: 80

    - host: debezium.local.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: debezium
                port:
                  number: 8083
